# HeatTransferConvection

./: CMakeLists.txt  HeatTransferLibrary.cpp  HeatTransferLibrary.h  mainwindow.cpp  mainwindow.h  mainwindowform.ui  mysettings.cpp  mysettings.h  mysettings.ui  outputwindow.cpp  outputwindow.h  outputwindow.ui  stuffpanel.cpp  stuffpanel.h  stuffpanel.ui
icons/: icons.qrc
